centered and placed arrow in div so that only one is visible for streams and games and added some animations but having issues implementing specific actions

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,14 +33,35 @@ body {
 }
 
 /*IC*/
+/*.toggle-area {
+  overflow: hidden;
+}*/
 .fa {
   color: red;
 }
 .user {
-  color: white;
-  padding-left: 15px;
-  padding-top: 15px;
+  /*color: white;
+  padding-left: 15px;*/
+  padding-top: 5px;
 }
+.example-enter {
+  opacity: 0.01;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.example-leave {
+  opacity: 1;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 700ms ease-in;
+}
+
 /*IC*/
 
 .hidden{
@@ -152,6 +173,7 @@ input {
   list-style-type: none;
   margin: 5px 10px 5px 10px
 }
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
